# lecture

./: .gitignore  about.html  contact.html  index.html  main.py  methodology.html  privacy.html  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: pages.yml
assets/: app.js  styles.css
data/: kbo_stats.json
scripts/: update_kbo_stats.py
