[project]
name = "npl-auto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "openai>=2.45.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
]
